[tool.poetry]
name = "chicago_transport_network"
version = "0.1.0"
description = ""
authors = ["kfengtee <kfengtee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
